# ottawa-meshbot

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: example_bot.py
src/ottawa_meshbot/: __init__.py  bot.py  commands.py  context.py  runner.py  simulator.py
src/ottawa_meshbot/commands/: __init__.py  echo.py  ping.py  roll.py
src/ottobot/: bot.py  cli.py  registry.py  runner.py  simulator.py
tests/: conftest.py  test_bot.py  test_command_echo.py  test_command_ping.py  test_command_roll.py  test_context.py  test_discovery.py  test_runner.py  test_simulator.py
