[project]
name = "ottawa-meshbot"
version = "0.1.0"
description = "A MeshCore chatbot framework with pluggable commands"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "meshcore>=2.3.7",
]

[dependency-groups]
dev = [
    "mypy>=1.14",
    "pytest>=8",
    "pytest-asyncio>=0.25",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
files = ["src", "tests", "examples"]
strict = true

[[tool.mypy.overrides]]
module = "meshcore.*"
ignore_missing_imports = true
